--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.14",
+    "@angular/animations": "^10.2.3",
     "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.11",
     "@angular/compiler": "~10.0.11",
@@ -24,8 +24,10 @@
     "angular-google-charts": "^1.1.6",
     "bootstrap": "^4.5.3",
     "hammerjs": "^2.0.8",
+    "ngx-toastr": "^13.1.0",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.6.3",
+    "toastr": "^2.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
