--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.5.3",
     "hammerjs": "^2.0.8",
     "ngx-toastr": "^13.1.0",
+    "ngx-webstorage-service": "^4.1.0",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.6.3",
     "toastr": "^2.1.4",
